plugins {
    id 'java'
    id 'java-library'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
    id 'org.beryx.runtime' version '1.13.1'
    id "de.undercouch.download" version "5.6.0"
}


group 'hswm.fqlite'
version '4.2'

def protocversion = "27.4"

def currentOs = org.gradle.internal.os.OperatingSystem.current()

application {
   mainClass.set("fqlite.base.JARStarter")
}
 

repositories {
    mavenCentral()
}

sourceSets {
    main {
        java {
            srcDirs = ['src']
        }
        resources {
            srcDirs "resources"
        }
    }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

javafx {
    version = "22"
    modules = [
            'javafx.base',
            'javafx.controls',
            'javafx.swing',
            'javafx.web',
            'javafx.fxml',
            'javafx.graphics',
            'javafx.media'
    ]
}

jar {
    manifest {
        attributes(
                'Main-Class': 'fqlite.base.JARStarter'
        )
    }
}

compileJava.options.encoding = 'UTF-8'
compileTestJava.options.encoding = 'UTF-8'
javadoc.options.encoding = 'UTF-8'

dependencies {
    implementation group: 'dev.langchain4j', name: 'langchain4j', version: '1.9.1'
    implementation group: 'dev.langchain4j', name: 'langchain4j-embeddings', version: '1.9.1-beta17'
    implementation group: 'dev.langchain4j', name: 'langchain4j-embeddings-bge-small-en-v15', version: '1.9.1-beta17'
    implementation group: 'dev.langchain4j', name: 'langchain4j-embeddings-all-minilm-l6-v2', version: '1.9.1-beta17'
    implementation("de.kherud:llama:4.2.0")
    implementation group: 'de.kherud', name: 'llama', version: '3.1.1'
    implementation group: 'org.antlr', name: 'antlr4', version: '4.8'
    implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.47.0.0'
}

task downloadProtoc(type: Download) {
    def protocOsName = ""
    if (currentOs.windows) {
        protocOsName = "win64"
    } else if (currentOs.linux) {
        protocOsName = "linux-x86_64"
    } else if (currentOs.macOsX) {
        protocOsName = "osx-universal_binary"
    }

    var fileName = "protoc-${protocversion}-${protocOsName}.zip"
    var protocUrl = "https://github.com/protocolbuffers/protobuf/releases/download/v${protocversion}/" + fileName
    src protocUrl
    dest new File(temporaryDir, fileName)
}

task downloadAndUnzipProtoc(dependsOn: downloadProtoc, type: Copy) {
    from zipTree(downloadProtoc.dest)
    into layout.buildDirectory.dir('protoc')
}

tasks.named('jpackage') {
    dependsOn downloadAndUnzipProtoc
}

tasks.jpackage.doFirst {
    def fqliteJpackageDirectory = "build/jpackage/"
    if (currentOs.windows) {
        fqliteJpackageDirectory += "fqlite"
    } else if (currentOs.linux) {
        fqliteJpackageDirectory += "fqlite/lib"
    } else if (currentOs.macOsX) {
        fqliteJpackageDirectory += "fqlite.app/Contents/MacOS"
    }
    copy {
        from layout.buildDirectory.dir('protoc')
        into "$fqliteJpackageDirectory/protoc"
    }
    copy {
        from layout.projectDirectory
        include 'proto.run', 'proto.sh', 'protoc.bat'
        into "$fqliteJpackageDirectory"
    }
}

// increase heap size for better performance
tasks.withType(JavaExec) {
    jvmArgs = [
            '-XX:NativeMemoryTracking=detail',
            '-XX:+UseZGC',
            '-XX:+ZGenerational',
            '-Xms32m',
            '-Xmx4G',
            '-XX:G1PeriodicGCInterval=10000',  // GC every 10s when idle
            '-XX:GCTimeRatio=4'
    ]
}


runtime {
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']

	// define modules manuel instead of automatic detection
    modules = [
        'java.base',
        'java.desktop',
        'java.logging',
        'java.naming',
        'java.sql',
        'java.xml',
        'jdk.unsupported'  
	]
	
	addOptions('--ignore-signing-information')
    
    javaHome = System.getProperty("java.home")
	
    launcher {
        noConsole = true
    }


    jpackage {
        installerOptions += ['--resource-dir', "resources"]

        // JVM-Args für die installierte Anwendung
        imageOptions += [
                '--java-options', '-XX:+UseZGC',
                '-XX:+ZGenerational',
                '-Xms32m',
                '-Xmx4G',
                '-XX:G1PeriodicGCInterval=10000',  // GC alle 10s wenn idle
                '-XX:GCTimeRatio=4'
        ]

        if (currentOs.windows) {
            installerOptions += ['--win-per-user-install', '--win-dir-chooser', '--win-menu', '--win-shortcut']
        } else if (currentOs.linux) {
            installerOptions += ['--linux-package-name', 'fqlite', '--linux-shortcut']
        } else if (currentOs.isMacOsX()) {
            imageOptions += ['--mac-package-name', 'fqlite']
            skipInstaller = true
        }
    }
		
	
}
